Changed one of the words on index page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
         <div id="portfolio-header">
             <h1>Dominik Keisz</h1>
             <div id="slogan">
-                <div class="word"><span class="myWord">Software Engineer</span>
+                <div class="word"><span class="myWord">Software Developer</span>
                     <div class="cursor"></div>
                 </div>
             </div>
