--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- Font-Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom Styles -->
@@ -61,9 +62,13 @@
                     <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
                 </a>
             </li>
+            <li>
+                <strong class="fa-2x"><span id="visitor-counter"></span></strong>
+            </li>
         </ul>
     </footer>
     <script src="resources/scripts/typer.js"></script>
+    <script src="resources/scripts/counter.js"></script>
 </body>
 
 </html>
